Add: Battle Container

--- a/Exercise 3 JS/public/game.html
+++ b/Exercise 3 JS/public/game.html
@@ -8,6 +8,17 @@
   </head>
   <body>
     <main class="container">
+      <section id="battleContainer" class="row">
+        <div id="playerType" class="col-xs-6 col-lg-3">
+          <img src="../assets/images/game-logos/Bug.png" />
+        </div>
+        <div class="col-xs-6 col-lg-3">
+          <img src="../assets/images/misc/vs.webp" height="150" width="150" />
+        </div>
+        <div id="enemyType" class="col-xs-6 col-lg-3">
+          <img src="../assets/images/game-logos/Bug.png" />
+        </div>
+      </section>
       <section id="typesContainer" class="row"></section>
     </main>
   </body>
