--- a/Exercise 3 JS/public/game.html
+++ b/Exercise 3 JS/public/game.html
@@ -21,6 +21,10 @@
       </section>
       <section id="typesContainer" class="row"></section>
     </main>
+    <article id="alert" class="invisible">
+      <div id="alertText">You Lost !</div>
+      <button id="alertButton">Again</button>
+    </article>
   </body>
   <script src="../assets/js/game.js"></script>
 </html>
