--- a/Exercise 3 JS/public/game.html
+++ b/Exercise 3 JS/public/game.html
@@ -22,8 +22,11 @@
       <section id="typesContainer" class="row"></section>
     </main>
     <article id="alert" class="invisible">
-      <div id="alertText">You Lost !</div>
+      <div id="alertText"></div>
       <button id="alertButton">Again</button>
+    </article>
+    <article id="turn" class="invisible">
+      <div id="turnText"></div>
     </article>
   </body>
   <script src="../assets/js/game.js"></script>
