Add: Attack/Defend System

--- a/Exercise 3 JS/public/game.html
+++ b/Exercise 3 JS/public/game.html
@@ -27,6 +27,7 @@
     </article>
     <article id="turn" class="invisible">
       <div id="turnText"></div>
+      <button id="turnButton">Ok</button>
     </article>
   </body>
   <script src="../assets/js/game.js"></script>
