Add: Background Images

--- a/Exercise 3 JS/public/game.html
+++ b/Exercise 3 JS/public/game.html
@@ -6,8 +6,9 @@
     <title>Game</title>
     <link href="../assets/styles/game.css" type="text/css" rel="stylesheet" />
   </head>
+  <div class="background"></div>
   <body>
-    <main class="container">
+    <main>
       <section id="battleContainer" class="row invisible">
         <div class="col-xs-6 col-lg-3">
           <img id="playerType" src="" />
