--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
         </div>
     </div>
 
+    <!-- Exercise 4: SQL -->
+    <div class="card m-3 border-0 rounded-5 shadow">
+        <div class="card-body p-4">
+            <i class="fa-brands fa-js mb-4"></i>
+            <h4 class="card-title mb-3 text-pink-secondary">Exercise 4: SQL</h4>
+            <a href="Exercise%204%20SQL/index.html"
+               class="btn bg-pink-tertiary px-3 py-2 w-100 rounded-4 fw-bold">Go</a>
+        </div>
+    </div>
+
 </div>
 
 </body>
