--- a/Exercise 5 PHP/index.html
+++ b/Exercise 5 PHP/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Intro CSS</title>
+    <title>Intro PHP</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="./../assets/styles/default.css" />
   </head>
@@ -11,13 +11,10 @@
     <main class="container mt-5">
       <header>
         <button class="btn bg-pink-secondary fw-bold"><a class="text-body text-decoration-none" href="../index.html">Accueil</a></button>
-        <h1>Intro SQL : Accueil</h1>
+        <h1>Intro PHP : Accueil</h1>
       </header>
       <nav class="list-group text-center">
-        <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/beginning.sql">DB Beginning</a>
-        <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/AldinMusicMerise.pdf">Merise</a>
-        <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/MUSIC_Aldin_SQL.pdf">TP Word</a>
-        <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/tp_sql.sql">TP SQL</a>
+        <a class="list-group-item list-group-item-action w-25 text-body text-decoration-none" href="./public/basics.php">Basics</a>
       </nav>
     </main>
   </body>
