--- a/index.html
+++ b/index.html
@@ -1,60 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exercises S2</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="./assets/styles/default.css">
-</head>
-<body>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+    <link rel="stylesheet" href="./assets/styles/default.css" />
+  </head>
+  <body>
+    <h1 class="mt-5 fw-bolder text-center text-pink-secondary">Exercises S2</h1>
 
-<h1 class="mt-5 fw-bolder text-center text-pink-secondary">Exercises S2</h1>
-
-<div class="container mt-5 d-flex justify-content-center flex-wrap text-center">
-
-    <!-- Exercise 1: CSS -->
-    <div class="card m-3 border-0 rounded-5 shadow">
+    <div class="container mt-5 d-flex justify-content-center flex-wrap text-center">
+      <!-- Exercise 1: CSS -->
+      <div class="card m-3 border-0 rounded-5 shadow">
         <div class="card-body p-4">
-            <i class="fa-brands fa-html5 mb-4"></i>
-            <h4 class="card-title mb-3 text-pink-secondary">Exercise 1: CSS</h4>
-            <a href="Exercise%201%20HTML/index.html"
-               class="btn bg-pink-tertiary px-3 py-2 w-100 rounded-4 fw-bold">Go</a>
+          <i class="fa-brands fa-html5 mb-4"></i>
+          <h4 class="card-title mb-3 text-pink-secondary">Exercise 1: CSS</h4>
+          <a href="Exercise%201%20HTML/index.html" class="btn bg-pink-tertiary px-3 py-2 w-100 rounded-4 fw-bold">Go</a>
         </div>
-    </div>
+      </div>
 
-    <!-- Exercise 2: CSS -->
-    <div class="card m-3 border-0 rounded-5 shadow">
+      <!-- Exercise 2: CSS -->
+      <div class="card m-3 border-0 rounded-5 shadow">
         <div class="card-body p-4">
-            <i class="fa-brands fa-css3 mb-4"></i>
-            <h4 class="card-title mb-3 text-pink-secondary">Exercise 2: CSS</h4>
-            <a href="Exercise%202%20CSS/index.html"
-               class="btn bg-pink-tertiary px-3 py-2 w-100 rounded-4 fw-bold">Go</a>
+          <i class="fa-brands fa-css3 mb-4"></i>
+          <h4 class="card-title mb-3 text-pink-secondary">Exercise 2: CSS</h4>
+          <a href="Exercise%202%20CSS/index.html" class="btn bg-pink-tertiary px-3 py-2 w-100 rounded-4 fw-bold">Go</a>
         </div>
-    </div>
+      </div>
 
-    <!-- Exercise 3: JS -->
-    <div class="card m-3 border-0 rounded-5 shadow">
+      <!-- Exercise 3: JS -->
+      <div class="card m-3 border-0 rounded-5 shadow">
         <div class="card-body p-4">
-            <i class="fa-brands fa-js mb-4"></i>
-            <h4 class="card-title mb-3 text-pink-secondary">Exercise 3: JS</h4>
-            <a href="Exercise%203%20JS/index.html"
-               class="btn bg-pink-tertiary px-3 py-2 w-100 rounded-4 fw-bold">Go</a>
+          <i class="fa-brands fa-js mb-4"></i>
+          <h4 class="card-title mb-3 text-pink-secondary">Exercise 3: JS</h4>
+          <a href="Exercise%203%20JS/index.html" class="btn bg-pink-tertiary px-3 py-2 w-100 rounded-4 fw-bold">Go</a>
         </div>
-    </div>
+      </div>
 
-    <!-- Exercise 4: SQL -->
-    <div class="card m-3 border-0 rounded-5 shadow">
+      <!-- Exercise 4: SQL -->
+      <div class="card m-3 border-0 rounded-5 shadow">
         <div class="card-body p-4">
-            <i class="fa-brands fa-js mb-4"></i>
-            <h4 class="card-title mb-3 text-pink-secondary">Exercise 4: SQL</h4>
-            <a href="Exercise%204%20SQL/index.html"
-               class="btn bg-pink-tertiary px-3 py-2 w-100 rounded-4 fw-bold">Go</a>
+          <i class="fa-solid fa-database mb-4"></i>
+          <h4 class="card-title mb-3 text-pink-secondary">Exercise 4: SQL</h4>
+          <a href="Exercise%204%20SQL/index.html" class="btn bg-pink-tertiary px-3 py-2 w-100 rounded-4 fw-bold">Go</a>
         </div>
+      </div>
+
+      <!-- Exercise 5: PHP -->
+      <div class="card m-3 border-0 rounded-5 shadow">
+        <div class="card-body p-4">
+          <i class="fa-brands fa-php mb-4"></i>
+          <h4 class="card-title mb-3 text-pink-secondary">Exercise 5: PHP</h4>
+          <a href="Exercise%205%20PHP/index.html" class="btn bg-pink-tertiary px-3 py-2 w-100 rounded-4 fw-bold">Go</a>
+        </div>
+      </div>
     </div>
-
-</div>
-
-</body>
+  </body>
 </html>
